--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,9 +5,9 @@
 @tailwind utilities;
 
 :root {
-  --duration: 8s;
-  --easing: linear;
-  --delay: 0s;
+  --duration: 2s; /* Duration of the animation */
+  --easing: linear; /* Animation easing */
+  --delay: 2s; /* Time between repetitions */
 }
 
 html {
@@ -41,7 +41,7 @@ html {
     position: absolute;
     top: 0;
     left: 0;
-    width: 300px;
+    width: 100px;
     height: 100%;
     color: rgba(255, 255, 255, 0);
     background-color: rgba(255, 255, 255, 0);
@@ -58,9 +58,11 @@ html {
 }
 
 @keyframes shine {
-  20%,
+  0% {
+    transform: skewX(-20deg) translateX(-100%);
+  }
   100% {
-    transform: translateX(150%);
+    transform: skewX(-20deg) translateX(150%);
   }
 }
 
